--- a/static/CSS/index.css
+++ b/static/CSS/index.css
@@ -165,20 +165,24 @@ h1, h2, h3, h4 {
 }
 
 .btn-hero {
-    background: var(--dorato);
     color: white;
-    padding: 15px 40px;
-    font-size: 1.1rem;
-    border: none;
+    padding: 15px 30px;
+    font-size: 1.35rem;
     border-radius: 50px;
+    width: 75%;
     transition: all 0.3s ease;
     text-decoration: none;
     display: inline-block;
     font-weight: 600;
+    text-align: center;
+    background: rgba(255, 230, 0, 0.08);
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255, 235, 0, 0.1);
+    transition: all 0.4s ease;
 }
 
 .btn-hero:hover {
-    background: var(--verde-oliva);
+    background: var(--dorato);
     transform: translateY(-3px);
     box-shadow: 0 10px 25px rgba(0,0,0,0.3);
     color: white;
