--- a/static/CSS/index.css
+++ b/static/CSS/index.css
@@ -121,7 +121,7 @@ p {
     right: 0;
     bottom: 0;
         background: linear-gradient(135deg, rgba(0, 0, 0, 0.182) 0%, rgba(57, 94, 52, 0.6) 100%), 
-                url('https://images.unsplash.com/photo-1696848962059-a7e577ca7e6b?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=687') center/cover fixed;
+                url('assets/IMGS/bg1.webp') center/cover fixed;
     filter: brightness(0.6);
     z-index: 1;
 }
@@ -506,7 +506,7 @@ section {
     right: 0;
     bottom: 0;
         background: linear-gradient(135deg, rgba(255, 255, 255, 0.256) 0%, rgba(57, 94, 52, 0.6) 100%), 
-                url('https://images.unsplash.com/photo-1566932864796-7fdc701a10b8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1170') center/cover fixed;
+                url('assets/IMGS/bg2.webp') center/cover fixed;
     filter: brightness(0.6);
 }
 
@@ -758,7 +758,7 @@ footer::after{
     right: 0;
     bottom: 0;
         background: linear-gradient(135deg, rgba(255, 255, 255, 0.256) 0%, rgba(57, 94, 52, 0.6) 100%), 
-                url('https://images.unsplash.com/photo-1612528908699-7f07afc94d54?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=687') center/cover fixed;
+                url('assets/IMGS/bg3.webp') center/cover fixed;
     filter: brightness(0.6);
     z-index: 1;
 }
