--- a/static/CSS/index.css
+++ b/static/CSS/index.css
@@ -121,7 +121,7 @@ p {
     right: 0;
     bottom: 0;
         background: linear-gradient(135deg, rgba(0, 0, 0, 0.182) 0%, rgba(57, 94, 52, 0.6) 100%), 
-                url('assets/IMGS/bg1.webp') center/cover fixed;
+                url('assets/IMGS/bg1.png') center/cover fixed;
     filter: brightness(0.6);
     z-index: 1;
 }
@@ -506,7 +506,7 @@ section {
     right: 0;
     bottom: 0;
         background: linear-gradient(135deg, rgba(255, 255, 255, 0.256) 0%, rgba(57, 94, 52, 0.6) 100%), 
-                url('assets/IMGS/bg2.webp') center/cover fixed;
+                url('assets/IMGS/bg2.png') center/cover fixed;
     filter: brightness(0.6);
 }
 
@@ -758,7 +758,7 @@ footer::after{
     right: 0;
     bottom: 0;
         background: linear-gradient(135deg, rgba(255, 255, 255, 0.256) 0%, rgba(57, 94, 52, 0.6) 100%), 
-                url('assets/IMGS/bg3.webp') center/cover fixed;
+                url('assets/IMGS/bg3.png') center/cover fixed;
     filter: brightness(0.6);
     z-index: 1;
 }
